<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    android:paddingVertical="64dp"
    android:paddingHorizontal="32dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/resltadoSueldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/icono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txttu_sueldo_neto_mensual_ser_a_de"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/resultado_neto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/netomensual"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txttendr_s_pagas_extras_de"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/resultado_pagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pagasanual" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtequivalente_a"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>/>
            <TextView
                android:id="@+id/resultado_netoAnual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/netoanual" />/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/resltadoSueldo"
        app:cardBackgroundColor="@color/bgselected"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtretenci_n_anual_de_irpf"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/resultado_IRPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/irpfanual"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txttipo_de_retenci_n"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/resultado_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tipoanual" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtcuotas_a_la_ss_anuales"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>/>
            <TextView
                android:id="@+id/resultado_SS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ssanual" />/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/volverButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnrepetir_simulaci_n"
        android:background="@color/resaltar"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".95"/>

</androidx.constraintlayout.widget.ConstraintLayout>