<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg"
    android:paddingHorizontal="32dp">

    <View
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@color/resaltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <!--Campos datos profesionales -->
    <androidx.cardview.widget.CardView
        android:id="@+id/datosProfesionales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:cardBackgroundColor="@color/bgcampo">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/cardDProfTitle"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/datos_personales"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <!--bruto-->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgcampo">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/sueldo_bruto_anual"
                            android:textSize="14sp"/>
                        <EditText
                            android:id="@+id/brutoAnual"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/hintbruto" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--Pagas-->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgcampo">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/n_pagas_anuales"
                            android:textSize="14sp"/>
                        <Spinner
                            android:id="@+id/spPagas"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </Spinner>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <!--Edad-->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgcampo">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/edad"
                            android:textSize="14sp"/>
                        <EditText
                            android:id="@+id/edad"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/_20" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--Grupo Profesional-->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgcampo">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/txtgrupo_profesional"
                            android:textSize="14sp"/>
                        <Spinner
                            android:id="@+id/spGrupoProf"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </Spinner>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <!--Grado discapacidad-->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgcampo">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/grado_de_discapacidad"
                            android:textSize="14sp"/>
                        <Spinner
                            android:id="@+id/spGradoDisc"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </Spinner>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <!--Estado Civil-->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgcampo">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/estado_civil"
                            android:textSize="14sp"/>
                        <Spinner
                            android:id="@+id/spEstadoCivil"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </Spinner>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <!--Número de Hijos-->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/bgcampo">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/n_mero_de_hijos"
                            android:textSize="14sp"
                            android:gravity="center"/>
                        <EditText
                            android:id="@+id/nrHijos"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:gravity="center"
                            android:hint="@string/_0" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>        
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calcButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTextCalc"
        android:background="@color/resaltar"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".85"/>



</androidx.constraintlayout.widget.ConstraintLayout>